--- a/css/main.css
+++ b/css/main.css
@@ -4,9 +4,32 @@
 
 html, body {
   height: 100%;
-  background-color: black;
 }
 
 .row .logo {
-  margin-bottom: 50px;
+  margin-bottom: 25px;
+}
+
+.full-height {
+  height: 100%;
+}
+
+.left-side-section {
+  border-right: 5px solid #F4F4F4;
+}
+
+.right-side-section {
+  border-left: 5px solid #F4F4F4;
+}
+
+.analysis {
+  
+}
+
+body.wobblebar {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -50px;
+  margin-left: -100px;
 }
