--- a/css/main.css
+++ b/css/main.css
@@ -2,34 +2,78 @@
   margin: 0 auto;
 }
 
-html, body {
-  height: 100%;
+.analysis, .query-box, .related, .articles {
+  border: 2px solid #111111;
+  padding: 10px;
+  border-radius: 10px;
+  margin-top: 20px;
+  box-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+               0px 8px 13px rgba(0,0,0,0.1),
+               0px 18px 23px rgba(0,0,0,0.1);
 }
 
-.row .logo {
-  margin-bottom: 25px;
+.progress {
+  margin-top: 35px;
 }
 
-.full-height {
-  height: 100%;
-}
-
-.left-side-section {
-  border-right: 5px solid #F4F4F4;
-}
-
-.right-side-section {
-  border-left: 5px solid #F4F4F4;
-}
-
-.analysis {
-  
-}
-
-body.wobblebar {
+.centered-as-fuck {
   position: fixed;
   top: 50%;
   left: 50%;
-  margin-top: -50px;
-  margin-left: -100px;
+  margin-top: -20px;
+  margin-left: -10px;
+}
+
+.sentiment {
+  margin-top: -5px;
+  position: absolute;
+  width: 100%;
+  font-size: 5em;
+  text-align: center;
+  font-family: 'Droid Sans', sans-serif;
+  z-index: 10;
+  text-shadow:
+   -1px -1px 0 #000,  
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+     1px 1px 0 #000;
+}
+
+.query-box {
+  margin-bottom: 20px;
+}
+
+.invisible {
+  visibility: hidden;
+}
+
+.like {
+  float: left;
+}
+
+.dislike {
+  margin-top: 25px;
+  float: right;
+}
+
+.svg-container {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  padding-bottom: 100%;
+  vertical-align: middle;
+  overflow: hidden;
+}
+
+.svg-img {
+  width: 50%;
+  height auto;
+}
+
+h1, h2 {
+  margin-top: 5px;
+}
+
+.snippet {
+  margin-left: 25px;
 }
