--- a/css/main.css
+++ b/css/main.css
@@ -4,12 +4,9 @@
 
 .analysis, .query-box, .related, .articles-holder {
   border: 2px solid #111111;
-  padding: 5px;
+  padding: 10px;
   border-radius: 10px;
   margin-top: 20px;
-}
-
-.progress {
 }
 
 .centered-as-fuck {
@@ -20,18 +17,15 @@
   margin-left: -10px;
 }
 
-.sentiment-dislike {
-  color: #FF4136;
-}
-
 .sentiment-like {
   color: #2ECC40;
-}
-
-.sentiment-like, .sentiment-dislike {
-  font-size: 2.5em;
+  font-size: 3em;
   font-weight: bold;
   font-family: 'Droid Sans', sans-serif;
+}
+
+.progress {
+  margin-bottom: 0;
 }
 
 .query-box {
@@ -51,7 +45,7 @@
 }
 
 .svg-img {
-  width: 75%;
+  width: 50%;
   height auto;
 }
 
