--- a/css/main.css
+++ b/css/main.css
@@ -13,12 +13,12 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  margin-top: -20px;
-  margin-left: -10px;
+  margin-top: -10px;
+  margin-left: -64px;
 }
 
 .sentiment-like {
-  color: #2ECC40;
+  color: #111111;
   font-size: 3em;
   font-weight: bold;
   font-family: 'Droid Sans', sans-serif;
@@ -37,16 +37,23 @@
 }
 
 .like {
-  float: left;
-}
-
-.dislike {
   float: right;
 }
 
+.dislike {
+  float: left;
+}
+
 .svg-img {
-  width: 50%;
+  width: 80%;
   height auto;
+}
+
+.svg-img-big {
+  float: left;
+  width: 90%;
+  height auto;
+  margin-top: 15px;
 }
 
 h1, h2 {
