--- a/css/main.css
+++ b/css/main.css
@@ -13,8 +13,8 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  margin-top: -10px;
-  margin-left: -64px;
+  margin-top: -20px;
+  margin-left: -20px;
 }
 
 .sentiment-like {
@@ -73,4 +73,5 @@ h1, h2 {
 
 .label {
   display: inline-block;
+  margin-right: 5px;
 }
