--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
   margin: 0 auto;
 }
 
-.analysis, .query-box, .related, .articles-holder {
+.analysis, .query-box, .articles {
   border: 2px solid #111111;
   padding: 10px;
   border-radius: 10px;
@@ -13,8 +13,8 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  margin-top: -20px;
-  margin-left: -20px;
+  margin-top: -25px;
+  margin-left: -25px;
 }
 
 .sentiment-like {
