A little more structure
And removing some unnecessary files, and starting the Golang version

--- a/site/css/main.css
+++ b/site/css/main.css
@@ -3,7 +3,7 @@
 }
 
 .analysis, .query-box, .articles {
-  border: 2px solid #111111;
+  background-color: #F2F2F2;
   padding: 10px;
   border-radius: 10px;
   margin-top: 20px;
